@@ -1,6 +1,10 @@
 2011-08-14  Yao Qi  <yao@codesourcery.com>
 
-	* gdb.texinfo: (Standard Target Features): Document C6x features.
+	* gdb.texinfo (General Query Packets): Document qXfer:fdpic:read packet.
+
+2011-08-14  Yao Qi  <yao@codesourcery.com>
+
+	* gdb.texinfo (Standard Target Features): Document C6x features.
 	(TIC6x Features): New node.
 
 2011-08-12  Doug Evans  <dje@google.com>
